--- a/Studentadminportal-ui/src/app/students/view-student/view-student.component.html
+++ b/Studentadminportal-ui/src/app/students/view-student/view-student.component.html
@@ -65,13 +65,13 @@
             <div class="col-xs-12">
               <mat-form-field appearance="outline">
                 <mat-label>Gender</mat-label>
-                <input type="text" matInput [(ngModel)]="student.gender.description" name="gender">
-                <!-- <mat-select [(ngModel)]="student.genderId" name="gender" required>
+                <!-- <input type="text" matInput [(ngModel)]="student.gender.description" name="gender"> -->
+                <mat-select [(ngModel)]="student.genderId" name="gender" required>
                   <mat-option *ngFor="let gender of genderList" [value]="gender.id">
                     {{ gender.description }}
                   </mat-option>
                 </mat-select>
-                <mat-error>Gender is a required field</mat-error> -->
+                <mat-error>Gender is a required field</mat-error>
               </mat-form-field>
             </div>
           </div>
@@ -94,18 +94,18 @@
               </mat-form-field>
             </div>
           </div>
-        <!--
+        
           <div class="row">
             <div class="col-xs-12">
               <div class="row between-xs" *ngIf="!isNewStudent">
                 <button mat-raised-button color="primary" (click)="onUpdate()">Save</button>
-                <button mat-raised-button color="warn" (click)="onDelete()">Delete</button>
+                <!-- <button mat-raised-button color="warn" (click)="onDelete()">Delete</button> -->
               </div>
               <div class="row between-xs" *ngIf="isNewStudent">
-                <button mat-raised-button color="primary" (click)="onAdd()">Add</button>
+                <!-- <button mat-raised-button color="primary" (click)="onAdd()">Add</button> -->
               </div>
             </div>
-          </div> -->
+          </div>
         </form>
       </div>
       <div class="col-xs-6">
