--- a/Studentadminportal-ui/src/app/students/view-student/view-student.component.html
+++ b/Studentadminportal-ui/src/app/students/view-student/view-student.component.html
@@ -99,7 +99,7 @@
             <div class="col-xs-12">
               <div class="row between-xs" *ngIf="!isNewStudent">
                 <button mat-raised-button color="primary" (click)="onUpdate()">Save</button>
-                <!-- <button mat-raised-button color="warn" (click)="onDelete()">Delete</button> -->
+                <button mat-raised-button color="warn" (click)="onDelete()">Delete</button> 
               </div>
               <div class="row between-xs" *ngIf="isNewStudent">
                 <!-- <button mat-raised-button color="primary" (click)="onAdd()">Add</button> -->
