End of Section 7

--- a/Studentadminportal-ui/src/app/students/view-student/view-student.component.html
+++ b/Studentadminportal-ui/src/app/students/view-student/view-student.component.html
@@ -102,7 +102,7 @@
                 <button mat-raised-button color="warn" (click)="onDelete()">Delete</button> 
               </div>
               <div class="row between-xs" *ngIf="isNewStudent">
-                <!-- <button mat-raised-button color="primary" (click)="onAdd()">Add</button> -->
+                <button mat-raised-button color="primary" (click)="onAdd()">Add</button>
               </div>
             </div>
           </div>
