--- a/Studentadminportal-ui/src/app/students/students.component.html
+++ b/Studentadminportal-ui/src/app/students/students.component.html
@@ -10,6 +10,9 @@
             <input type="text" class="search-input" placeholder="Search Students"
             [(ngModel)]="filterString"
             (keyup)="filterStudents()">
+            <a routerLink="/students/add" mat-raised-button color="primary" class="ml-1">
+                Add New Student
+            </a>
         </div>
     </div>
     <div class="mt-1 mat-elevation-z8">
