--- a/Studentadminportal-ui/src/styles.css
+++ b/Studentadminportal-ui/src/styles.css
@@ -12,6 +12,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin: 0;
 }
 
+.ml-1{
+    margin-left: 1em;
+}
+
 .mt-1{
     margin-top: 1em;
 }
