--- a/Studentadminportal-ui/src/app/students/view-student/view-student.component.css
+++ b/Studentadminportal-ui/src/app/students/view-student/view-student.component.css
@@ -13,7 +13,7 @@
     border: 2px solid #CCC;
     border-radius: 50%;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     overflow: hidden;
   }
